Your descriptive message here

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>Wanderlust Travel | Find Your Perfect Destination</title>
 
   <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800
+  <link rel="preconnect" href="https://<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>">
+  <link href="https://<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>/css2?family=Poppins:wght@400;500;600;700;800
     &family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 
   <!-- Leaflet CSS for maps -->
