Add index.html with semantic structure, nav, hero, and sections

--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Wanderlust Travel - Discover your perfect holiday
-    destination with interactive maps and country guides.">
+  <meta name="description" content="Wanderlust Travel - Discover your perfect holiday destination with interactive maps and country guides.">
   <title>Wanderlust Travel | Find Your Perfect Destination</title>
 
   <!-- Google Fonts -->
-  <link rel="preconnect" href="https://<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>">
-  <link href="https://<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>/css2?family=Poppins:wght@400;500;600;700;800
-    &family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 
   <!-- Leaflet CSS for maps -->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
 
   <!-- Our custom CSS (linked in head - criterion 2.5) -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -72,7 +67,7 @@
       </div>
     </section>
 
-    <!-- Search Results (hidden until search) -->
+    <!-- Search Results (hidden until user searches) -->
     <section id="results-section" class="results-section"
       style="display:none;" aria-label="Search results">
       <h2 class="section-title" id="results-title">Search Results</h2>
@@ -142,8 +137,7 @@
     aria-label="Back to top">&#x2191;</button>
 
   <!-- JavaScript at BOTTOM of body (criterion 2.5) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js">
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
 </html>
