--- a/destinations.html
+++ b/destinations.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore holiday destinations worldwide with
-    interactive maps, country data, and travel information.">
+  <meta name="description" content="Explore holiday destinations worldwide with interactive maps, country data, and travel information.">
   <title>Destinations | Wanderlust Travel</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800
-    &family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
+
+  <!-- HEADER & NAVIGATION -->
   <header>
     <nav class="navbar" role="navigation" aria-label="Main navigation">
       <div class="navbar-inner">
@@ -31,11 +30,14 @@
       </div>
     </nav>
   </header>
+
+  <!-- MAIN CONTENT -->
   <main id="main-content">
     <section class="page-header">
       <h1>Explore Destinations</h1>
       <p>Search for any country to see its details and location on the map.</p>
     </section>
+
     <section class="dest-search-section">
       <form id="dest-search-form" class="dest-search-box" role="search">
         <input type="text" id="dest-search-input"
@@ -45,6 +47,7 @@
       <div id="dest-feedback" class="feedback" role="alert" aria-live="polite"></div>
       <div id="dest-spinner" class="spinner" role="status"></div>
     </section>
+
     <section class="dest-results-section">
       <div id="dest-map-container" class="map-container">
         <div id="dest-map"></div>
@@ -52,6 +55,8 @@
       <div id="dest-grid" class="cards-grid"></div>
     </section>
   </main>
+
+  <!-- FOOTER -->
   <footer>
     <div class="footer-inner">
       <div class="footer-links">
@@ -64,7 +69,10 @@
       <p class="footer-copy">&copy; 2026 Wanderlust Travel.</p>
     </div>
   </footer>
+
   <button class="back-top" id="back-top-btn" aria-label="Back to top">&#x2191;</button>
+
+  <!-- JavaScript at bottom of body -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
