Add contact.html with validated contact form

--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Contact Wanderlust Travel for holiday
-    recommendations and travel packages.">
+  <meta name="description" content="Contact Wanderlust Travel for holiday recommendations and travel packages.">
   <title>Contact Us | Wanderlust Travel</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800
-    &family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
+
+  <!-- HEADER & NAVIGATION -->
   <header>
     <nav class="navbar" role="navigation" aria-label="Main navigation">
       <div class="navbar-inner">
@@ -29,11 +29,14 @@
       </div>
     </nav>
   </header>
+
+  <!-- MAIN CONTENT -->
   <main id="main-content">
     <section class="page-header">
       <h1>Get In Touch</h1>
       <p>Have questions about a destination or want a personalised travel package?</p>
     </section>
+
     <section class="contact-section">
       <form id="contact-form" class="contact-form" novalidate>
         <div class="form-group">
@@ -65,6 +68,8 @@
       </form>
     </section>
   </main>
+
+  <!-- FOOTER -->
   <footer>
     <div class="footer-inner">
       <div class="footer-links">
@@ -77,8 +82,10 @@
       <p class="footer-copy">&copy; 2026 Wanderlust Travel.</p>
     </div>
   </footer>
+
   <button class="back-top" id="back-top-btn" aria-label="Back to top">&#x2191;</button>
-  <!-- EmailJS SDK - for sending emails from the form -->
+
+  <!-- EmailJS SDK for sending emails from the form -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/contact.js"></script>
