Fix HTML validation: remove trailing slash and redundant nav role

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 
   <!-- Leaflet CSS for maps -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css">
 
   <!-- Our custom CSS (linked in head - criterion 2.5) -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -23,7 +23,7 @@
 
   <!-- HEADER & NAVIGATION -->
   <header>
-    <nav class="navbar" role="navigation" aria-label="Main navigation">
+    <nav class="navbar" aria-label="Main navigation">
       <div class="navbar-inner">
         <a href="index.html" class="logo" aria-label="Wanderlust Travel home">
           <span class="logo-icon">&#x2708;</span>
