Fix HTML validation: remove trailing slash and redundant nav role

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
   <!-- HEADER & NAVIGATION -->
   <header>
-    <nav class="navbar" role="navigation" aria-label="Main navigation">
+    <nav class="navbar" aria-label="Main navigation">
       <div class="navbar-inner">
         <a href="index.html" class="logo" aria-label="Wanderlust Travel home">
           <span class="logo-icon">&#x2708;</span><span>Wanderlust</span>
