Fix HTML validation: change sections without headings to divs

--- a/destinations.html
+++ b/destinations.html
@@ -38,7 +38,7 @@
       <p>Search for any country to see its details and location on the map.</p>
     </section>
 
-    <section class="dest-search-section">
+    <div class="dest-search-section">
       <form id="dest-search-form" class="dest-search-box" role="search">
         <input type="text" id="dest-search-input"
           placeholder="Type a country name..." aria-label="Search countries">
@@ -48,12 +48,12 @@
       <div id="dest-spinner" class="spinner" role="status"></div>
     </section>
 
-    <section class="dest-results-section">
+    <div class="dest-results-section">
       <div id="dest-map-container" class="map-container">
         <div id="dest-map"></div>
       </div>
       <div id="dest-grid" class="cards-grid"></div>
-    </section>
+    </div
   </main>
 
   <!-- FOOTER -->
