Fix destinations.html validation errors: correct closing tags

--- a/destinations.html
+++ b/destinations.html
@@ -46,14 +46,14 @@
       </form>
       <div id="dest-feedback" class="feedback" role="alert" aria-live="polite"></div>
       <div id="dest-spinner" class="spinner" role="status"></div>
-    </section>
+    </div>
 
     <div class="dest-results-section">
       <div id="dest-map-container" class="map-container">
         <div id="dest-map"></div>
       </div>
       <div id="dest-grid" class="cards-grid"></div>
-    </div
+    </div>
   </main>
 
   <!-- FOOTER -->
