feat: enable favourites on homepage and link features module

--- a/index.html
+++ b/index.html
@@ -139,5 +139,6 @@
   <!-- JavaScript at BOTTOM of body (criterion 2.5) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/features.js"></script>
 </body>
 </html>
